Modification des routes pour la partie administration creation des templates pour les mails

--- a/public/Todo
+++ b/public/Todo
@@ -18,7 +18,7 @@
 
 - panneau : manque du mode de paiement de l'acheteur
 - detail d'un billet : faire les actions des 3 boutons
-- interested_event: limiter a un interet par event
+- interested_event: limiter a un interet par eventp
 
 - create event : faire les actions des boutons
 
