--- a/public/Todo
+++ b/public/Todo
@@ -6,26 +6,28 @@
 - hover sur catégorie type te billet
 - enlever le rafraichissement du token
 
-- faire les templates des mail et du pdf
-
 - gerer google map
 
 - creer un organisateur on dit erreur le champ image est requis alors qu'il est là
-- il faut que tous les objets qui ont l'image là quand on les enregistre ça renvoi l'id pour que je set l'image a parti de l'id là
 
 - gerer le translate des titres qui sont définis dans le scope
 - gérer le changement automatique de la langue a partir du footer (EVARIS)
 
 - panneau : manque du mode de paiement de l'acheteur
 - detail d'un billet : faire les actions des 3 boutons
-- interested_event: limiter a un interet par eventp
-
+- page d'aide
 - create event : faire les actions des boutons
 
+- ticket : faire l'interface ou l'utilisateur est supposé avoir les coordonées du virement
+- mode de paiement
+
 - creer et editer un evenement
+- choisir le mode de paiement du billet
 - partie admin
 - partager un event
 
+- Point de distribution des billet
 
-
-http://www.17educations.com/whatsapp/send-whatsapp-message-using-php/
+Evaris
+Remerber token est null quand je cree un compte sur l'interface
+la mise à jour d'une personne qui n'a pas d'image est impossible a cause de l'image  Erreur:"Call to a member function getClientOriginalName() on a non-object"
