--- a/public/Todo
+++ b/public/Todo
@@ -8,18 +8,16 @@
 
 - gerer google map
 
-- creer un organisateur on dit erreur le champ image est requis alors qu'il est là
+- creer un organisateur on dit erreur le champ image est requis alors qu'il est là (vagrant)
 
 - gerer le translate des titres qui sont définis dans le scope
 - gérer le changement automatique de la langue a partir du footer (EVARIS)
 
-- panneau : manque du mode de paiement de l'acheteur
 - detail d'un billet : faire les actions des 3 boutons
-- page d'aide
+- page d'aide [OK]
 - create event : faire les actions des boutons
 
-- ticket : faire l'interface ou l'utilisateur est supposé avoir les coordonées du virement
-- mode de paiement
+<A HREF="mailto:san@antonio.net">san@antonio.net</A>
 
 - creer et editer un evenement
 - choisir le mode de paiement du billet
@@ -31,3 +29,4 @@
 Evaris
 Remerber token est null quand je cree un compte sur l'interface
 la mise à jour d'une personne qui n'a pas d'image est impossible a cause de l'image  Erreur:"Call to a member function getClientOriginalName() on a non-object"
+impossible de supprimer un participant
