Integration des remarques integration du favicon integration validate event_form

--- a/public/Todo
+++ b/public/Todo
@@ -3,13 +3,8 @@
 ============
 - la langue
 - alerte pour la validation des formulaires
-- creer et editer un evenement
-
-==============
-= Si content =
-==============
-
-Que se passe t'il quand il entre le numéro qui fera le orange money?
+- editer un evenement
+- form validate
 
 
 =========
