- langue - reutilisation des adresses - point de distribution dans create_event - Responsive - a propos - cookies - politique - condition

--- a/public/Todo
+++ b/public/Todo
@@ -5,6 +5,7 @@
 - editer un evenement
 - form validate
 - partager sur facebook
+- changer font logo
 
 ======
 = OK =
@@ -14,3 +15,7 @@
 - reutilisation des adresses
 - point de distribution dans create_event
 - Responsive
+- a propos
+- cookies
+- politique
+- condition
