- langue - reutilisation des adresses - point de distribution dans create_event - Responsive - a propos - cookies - politique - condition - changer font logo - editer un evenement ( à tester par Evaris)

--- a/public/Todo
+++ b/public/Todo
@@ -1,11 +1,3 @@
-============
-= Priorité =
-============
-- alerte pour la validation des formulaires
-- editer un evenement
-- form validate
-- partager sur facebook
-- changer font logo
 
 ======
 = OK =
@@ -19,3 +11,5 @@
 - cookies
 - politique
 - condition
+- changer font logo
+- editer un evenement ( à tester par Evaris)
