--- a/public/Todo
+++ b/public/Todo
@@ -12,4 +12,18 @@
 - politique
 - condition
 - changer font logo
+
+
 - editer un evenement ( à tester par Evaris)
+
+
+php artisan queue:listen
+
+
+- modifier person : problème d'image et de date
+- il faut un slash dans le nom de l'image Evaris: quand tu creer un event, son image apparait dans le listing mais dans le detail ça ne s'affiche pas. dans la bd le nom de l'image commence avec / mais quand tu creer un event il 'ya pas de / dans le nom
+- supprimer un event
+- editer un event
+
+ajout de l'id de l'adresse
+ajout de l'id de l'utilisateur
